Fix button alignment in TaskCreator

--- a/frontend/src/components/TaskCreator/index.module.scss
+++ b/frontend/src/components/TaskCreator/index.module.scss
@@ -18,7 +18,6 @@
 .TaskCreatorRow {
   display: flex;
   flex-direction: row;
-  align-items: center;
   width: 100%;
   margin-bottom: 1em;
 
